# milter-blockdomain

./: ChangeLog  Copyright  Makefile.am  Makefile.in  README.md  ReadMe  config.h.in  configure  configure.ac  milter-blockdomain.conf-sample  samplelist.txt
.github/workflows/: jekyll-gh-pages.yml
src/: Makefile.am  Makefile.in  blkdom_check.c  blkdom_config.c  blkdom_util.c  milter-blockdomain.c  milter-blockdomain.h
